--- a/deploy/helm/rag-ui/values-crc-cpu.yaml
+++ b/deploy/helm/rag-ui/values-crc-cpu.yaml
@@ -1,23 +1,22 @@
-# Default values for llama-stack.
+# Default values for rag-ui.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-  repository: llamastack/distribution-remote-vllm
+  repository: quay.io/yuvalturg/llamastack-dist-ui
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "0.1.9"
+  tag: 0.1.9
 
 imagePullSecrets: []
-nameOverride: "llamastack"
-fullnameOverride: "llamastack"
+nameOverride: ""
+fullnameOverride: ""
 
 serviceAccount:
   # Specifies whether a service account should be created
   create: false
-
 
 podAnnotations: {}
 podLabels: {}
@@ -35,49 +34,27 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 8321
+  port: 8501
 
-args:
-  - --config
-  - /app-config/config.yaml
 env:
-  - name: VLLM_MAX_TOKENS
-    value: "4096"
-  - name: VLLM_URL
-    value: http://vllm:8000/v1
-  - name: VLLM_API_TOKEN
-    value: fake
-  - name:  SAFETY_VLLM_URL
-    value: http://safety:8000/v1
-  - name: OTEL_ENDPOINT
-    value: http://otel-collector-collector.observability-hub.svc.cluster.local:4318/v1/traces
-  - name: POSTGRES_USER
-    valueFrom:
-      secretKeyRef:
-        key: username
-        name: pgvector
-  - name: POSTGRES_PASSWORD
-    valueFrom:
-      secretKeyRef:
-        key: password
-        name: pgvector
-  - name: POSTGRES_HOST
-    valueFrom:
-      secretKeyRef:
-        key: host
-        name: pgvector
-  - name: POSTGRES_PORT
-    valueFrom:
-      secretKeyRef:
-        key: port
-        name: pgvector
-  - name: PGVECTOR_DBNAME
-    valueFrom:
-      secretKeyRef:
-        key: dbname
-        name: pgvector
+  - name: LLAMA_STACK_ENDPOINT
+    value: 'http://llamastack:8321'
 
-
+ingress:
+  enabled: false
+  className: ""
+  annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+  hosts:
+    - host: chart-example.local
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+  tls: []
+  #  - secretName: chart-example-tls
+  #    hosts:
+  #      - chart-example.local
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
@@ -91,34 +68,27 @@ resources: {}
   #   cpu: 100m
   #   memory: 128Mi
 
+livenessProbe:
+  httpGet:
+    path: /
+    port: http
+readinessProbe:
+  httpGet:
+    path: /
+    port: http
 
 autoscaling:
   enabled: false
 
 # Additional volumes on the output Deployment definition.
-volumes:
-  - configMap:
-      defaultMode: 420
-      name: run-config
-    name: run-config-volume
-  - emptyDir: {}
-    name: llama-temp
-  - emptyDir: {}
-    name: cache
-
+volumes: []
 # - name: foo
 #   secret:
 #     secretName: mysecret
 #     optional: false
 
 # Additional volumeMounts on the output Deployment definition.
-volumeMounts:
-  - mountPath: /app-config
-    name: run-config-volume
-  - mountPath: /.llama
-    name: llama-temp
-  - mountPath: /.cache
-    name: cache
+volumeMounts: []
 # - name: foo
 #   mountPath: "/etc/foo"
 #   readOnly: true
@@ -128,3 +98,32 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+llama-stack:
+  extraEnv:
+    - name: INFERENCE_MODEL
+      value: meta-llama/Llama-3.2-1B-Instruct
+    - name:  SAFETY_MODEL
+      value: meta-llama/Llama-Guard-3-1B
+
+llama-serve:
+  extraArgs:
+    - --model
+    - meta-llama/Llama-3.2-1B-Instruct
+  tolerations: []
+  resources: null
+  image:
+    repository: public.ecr.aws/q9t5s3a7/vllm-cpu-release-repo
+    pullPolicy: IfNotPresent
+    tag: v0.8.1
+
+safety-model:
+  extraArgs:
+    - --model
+    - meta-llama/Llama-Guard-3-1B
+  tolerations: []
+  resources: null
+  image:
+    repository: public.ecr.aws/q9t5s3a7/vllm-cpu-release-repo
+    pullPolicy: IfNotPresent
+    tag: v0.8.1
