--- a/deploy/helm/rag-ui/charts/minio/templates/service.yaml
+++ b/deploy/helm/rag-ui/charts/minio/templates/service.yaml
@@ -11,23 +11,10 @@ spec:
     - port: {{ .Values.service.port }}
       targetPort: http
       protocol: TCP
-      name: http
-  selector:
-    {{- include "minio.selectorLabels" . | nindent 4 }}
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: {{ include "minio.fullname" . }}-api
-  labels:
-    {{- include "minio.labels" . | nindent 4 }}
-spec:
-  type: {{ .Values.service.type }}
-  ports:
+      name: webui
     - port: {{ .Values.service.apiPort }}
       targetPort: http
       protocol: TCP
-      name: http
+      name: api
   selector:
     {{- include "minio.selectorLabels" . | nindent 4 }}
