adjust target ports
Signed-off-by: Yuval Turgeman <yturgema@redhat.com>

--- a/deploy/helm/rag-ui/charts/minio/templates/service.yaml
+++ b/deploy/helm/rag-ui/charts/minio/templates/service.yaml
@@ -9,11 +9,11 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      targetPort: {{ .Values.service.port }}
       protocol: TCP
       name: webui
     - port: {{ .Values.service.apiPort }}
-      targetPort: http
+      targetPort: {{ .Values.service.apiPort }}
       protocol: TCP
       name: api
   selector:
