--- a/deploy/helm/rag-ui/values-crc-cpu.yaml
+++ b/deploy/helm/rag-ui/values-crc-cpu.yaml
@@ -7,7 +7,6 @@ replicaCount: 1
 image:
   repository: quay.io/yuvalturg/llamastack-dist-ui
   pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
   tag: 0.1.9
 
 imagePullSecrets: []
@@ -15,22 +14,14 @@ nameOverride: ""
 fullnameOverride: ""
 
 serviceAccount:
-  # Specifies whether a service account should be created
   create: false
 
 podAnnotations: {}
 podLabels: {}
 
 podSecurityContext: {}
-  # fsGroup: 2000
 
 securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
 
 service:
   type: ClusterIP
@@ -46,29 +37,14 @@ ingress:
   enabled: false
   className: ""
   annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
   hosts:
     - host: chart-example.local
       paths:
         - path: /
           pathType: ImplementationSpecific
   tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
 
 resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
 
 livenessProbe:
   httpGet:
@@ -103,14 +79,38 @@ tolerations: []
 
 affinity: {}
 
-llama-stack:
-  extraEnv:
-    - name: INFERENCE_MODEL
-      value: meta-llama/Llama-3.2-1B-Instruct
-    - name:  SAFETY_MODEL
-      value: meta-llama/Llama-Guard-3-1B
+global:
+  models:
+    llama-instruct:
+      id: meta-llama/Llama-3.2-1B-Instruct
+      inferenceService:
+        name: llama-instruct
+        storageUri: oci://quay.io/redhat-ai-services/modelcar-catalog:llama-3.2-1b-instruct
+        args:
+        - --enable-auto-tool-choice
+        - --chat-template
+        - /workspace/vllm/examples/tool_chat_template_llama3.2_json.jinja
+        - --tool-call-parser
+        - llama3_json
+      llamaStack:
+        modelIdEnvVar: INFERENCE_MODEL
+        modelUrlEnvVar: VLLM_URL
+    llama-guard:
+      id: meta-llama/Llama-Guard-3-1B
+      inferenceService:
+        name: llama-guard
+        storageUri: oci://quay.io/ecosystem-appeng/modelcars:llama-guard-3-1b
+      llamaStack:
+        modelIdEnvVar: SAFETY_MODEL
+        modelUrlEnvVar: SAFETY_VLLM_URL
 
+llm-service:
+  servingRuntimeImage: public.ecr.aws/q9t5s3a7/vllm-cpu-release-repo@sha256:6b0d6af534a3c2a24fbcbd0e5e919f9f215be73fdf799a7bbd324178956cb7df
+
+
+## llama-serve and safety-model were replaced by llm-service, set replicaCount=0 ##
 llama-serve:
+  replicaCount: 0
   extraArgs:
     - --model
     - meta-llama/Llama-3.2-1B-Instruct
@@ -122,6 +122,7 @@ llama-serve:
     tag: v0.8.1
 
 safety-model:
+  replicaCount: 0
   extraArgs:
     - --model
     - meta-llama/Llama-Guard-3-1B
