--- a/deploy/helm/rag-ui/charts/llama-stack/templates/deployment.yaml
+++ b/deploy/helm/rag-ui/charts/llama-stack/templates/deployment.yaml
@@ -1,3 +1,5 @@
+{{- $root := . }}
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -38,8 +40,11 @@ spec:
             {{- toYaml .Values.args | nindent 12 }}
           env:
             {{- toYaml .Values.env | nindent 12 }}
-            {{- with .Values.extraEnv }}
-            {{- toYaml . | nindent 12 }}
+            {{- range $key, $model := $.Values.global.models }}
+            - name: {{ $model.llamaStack.modelIdEnvVar }}
+              value: {{ $model.id }}
+            - name: {{ $model.llamaStack.modelUrlEnvVar }}
+              value: https://{{ $model.inferenceService.name }}.{{ $root.Release.Namespace }}.svc.cluster.local/v1
             {{- end }}
           ports:
             - name: http
