--- a/deploy/helm/rag-ui/charts/llama-stack/templates/deployment.yaml
+++ b/deploy/helm/rag-ui/charts/llama-stack/templates/deployment.yaml
@@ -9,6 +9,10 @@ spec:
   selector:
     matchLabels:
       {{- include "llama-stack.selectorLabels" . | nindent 6 }}
+  {{- with .Values.strategy }}
+  strategy:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
