Support multiple models
Signed-off-by: Yuval Turgeman <yturgema@redhat.com>

--- a/deploy/helm/Makefile
+++ b/deploy/helm/Makefile
@@ -2,7 +2,9 @@
 # Replaces the original deploy.sh script with additional uninstall functionality
 
 ifeq ($(NAMESPACE),)
-  $(error NAMESPACE is not set)
+	ifeq ($(findstring list-models,$(MAKECMDGOALS)),)
+		$(error NAMESPACE is not set)
+	endif
 endif
 
 # Default values
@@ -20,14 +22,14 @@ MCP_SERVERS_CHART_PATH ?= mcp-servers
 INGESTION_PIPELINE_CHART_PATH ?= ingestion-pipeline
 MCP_SERVERS_RELEASE_NAME ?= mcp-servers
 INGESTION_PIPELINE_RELEASE_NAME ?= ingestion-pipeline
-
+TOLERATIONS_TEMPLATE=[{"key":"$(1)","effect":"NoSchedule","operator":"Exists"}]
 
 # Default target
 .PHONY: help
 help:
 	@echo "Available targets:"
 	@echo "  install       - Install the RAG deployment (creates namespace, secrets, and deploys Helm chart)"
-	@echo "  install-crc   - Install the RAG deployment on CRC no GPU (creates namespace, secrets, and deploys Helm chart)"
+	@echo "  install-cpu   - Install the RAG deployment without GPU (creates namespace, secrets, and deploys Helm chart)"
 	@echo "  uninstall     - Uninstall the RAG deployment and clean up resources"
 	@echo "  status        - Check status of the deployment"
 	@echo "  wait          - Wait for all pods to be ready and verify deployment health"
@@ -84,56 +86,60 @@ pg-vector:
 install-mcp-servers: namespace
 	
 	@echo "Deploying Helm chart $(MCP_SERVERS_CHART_PATH) as release $(MCP_SERVERS_RELEASE_NAME) in namespace $(NAMESPACE)..."
-	helm upgrade --install $(MCP_SERVERS_RELEASE_NAME) $(MCP_SERVERS_CHART_PATH) -n $(NAMESPACE) 
+	helm upgrade --install $(MCP_SERVERS_RELEASE_NAME) $(MCP_SERVERS_CHART_PATH) -n $(NAMESPACE)
 
 .PHONY: install-ingestion-pipeline
 install-ingestion-pipeline: namespace
 	
 	@echo "Deploying Helm chart $(INGESTION_PIPELINE_CHART_PATH) as release $(INGESTION_PIPELINE_RELEASE_NAME) in namespace $(NAMESPACE)..."
-	helm install ingestion-pipeline $(INGESTION_PIPELINE_CHART_PATH) -n $(NAMESPACE) 
+	helm install ingestion-pipeline $(INGESTION_PIPELINE_CHART_PATH) -n $(NAMESPACE)
+
+list-models-%:
+
+	@helm template dummy-release rag-ui/ --set _debugListModels=true --values rag-ui/values-$*.yaml |grep ^model
+
+.PHONY: list-models
+list-models: list-models-gpu
+
+set_helm_values = \
+    $(if $(LLM),--set-json global.models.$(LLM).enabled='true',) \
+    $(if $(SAFETY),--set-json global.models.$(SAFETY).enabled='true',) \
+    $(if $(LLM_URL),--set-json global.models.$(LLM).llamaStack.modelUrl.envValue='"$(LLM_URL)"',) \
+    $(if $(SAFETY_URL),--set-json global.models.$(SAFETY).llamaStack.modelUrl.envValue='"$(SAFETY_URL)"',) \
+    $(if $(LLM_TOLERATION),--set-json global.models.$(LLM).inferenceService.tolerations='$(call TOLERATIONS_TEMPLATE,$(LLM_TOLERATION))',) \
+    $(if $(SAFETY_TOLERATION),--set-json global.models.$(SAFETY).inferenceService.tolerations='$(call TOLERATIONS_TEMPLATE,$(SAFETY_TOLERATION))',)
+
+install-%: namespace secrets
+
+	# Build helm upgarde args from env
+	@$(eval SET_VALUES := $(call set_helm_values))
+
+	@$(MAKE) install-mcp-servers
+
+	@echo "Deploying Helm chart $(CHART_PATH) (services) release $(RELEASE_NAME) in namespace $(NAMESPACE)..."
+	helm upgrade --install $(RELEASE_NAME) $(CHART_PATH) -n $(NAMESPACE) --wait --values rag-ui/values-$*.yaml \
+	--set-json llama-stack.enabled=false $(SET_VALUES)
+
+	oc rollout status deployment -n $(NAMESPACE) -l component=predictor
+
+	@echo "Deploying Helm chart $(CHART_PATH) (llamastack) as release $(RELEASE_NAME) in namespace $(NAMESPACE)..."
+	helm upgrade --install $(RELEASE_NAME) $(CHART_PATH) -n $(NAMESPACE) --values rag-ui/values-$*.yaml \
+	--set-json llama-stack.enabled=true $(SET_VALUES)
+
+	@$(MAKE) pg-vector
+
+	@$(MAKE) status
+	@$(MAKE) install-ingestion-pipeline
+	@echo "Waiting for deployment to be ready..."
+	@$(MAKE) wait
+	oc exec minio-0 -- bash -c "mc alias set local http://localhost:9000 $(MINIO_USER) $(MINIO_PASSWORD) && mc mb local/llama"
 
 .PHONY: install
-install: namespace secrets
-
-	@$(MAKE) install-mcp-servers
-
-	@echo "Deploying Helm chart $(CHART_PATH) as release $(RELEASE_NAME) in namespace $(NAMESPACE)..."
-	helm upgrade --install $(RELEASE_NAME) $(CHART_PATH) -n $(NAMESPACE) \
-	--set-json llama-serve.tolerations='[{"key":"$(TOLERATION_LLM_SERVER)","effect":"NoSchedule","operator":"Exists"}]' \
-	--set-json safety-model.tolerations='[{"key":"$(TOLERATION_SAFETY_SERVER)","effect":"NoSchedule","operator":"Exists"}]' \
-	--set-json global.models.llama-instruct.inferenceService.tolerations='[{"key":"$(TOLERATION_LLM_SERVER)","effect":"NoSchedule","operator":"Exists"}]' \
-	--set-json global.models.llama-guard.inferenceService.tolerations='[{"key":"$(TOLERATION_SAFETY_SERVER)","effect":"NoSchedule","operator":"Exists"}]'
-	
-	@$(MAKE) pg-vector
-	
-	@$(MAKE) status
-	@$(MAKE) install-ingestion-pipeline
-
-	oc exec minio-0 -- bash -c "mc alias set local http://localhost:9000 minio_rag_user minio_rag_password && mc mb local/llama"
-
-	@echo "Waiting for deployment to be ready..."
-	@$(MAKE) wait
-	
-
-.PHONY: install-crc
-install-crc: namespace secrets
-
-	@$(MAKE) install-mcp-servers
-
-	@echo "Deploying Helm chart $(CHART_PATH) as release $(RELEASE_NAME) in namespace $(NAMESPACE)..."
-	helm upgrade --install $(RELEASE_NAME) $(CHART_PATH) -n $(NAMESPACE) --values rag-ui/values-crc-cpu.yaml
-	
-	@$(MAKE) pg-vector
-
-	@$(MAKE) status
-	@$(MAKE) install-ingestion-pipeline
-	@echo "Waiting for deployment to be ready..."
-	@$(MAKE) wait
-	oc exec minio-0 -- bash -c "mc alias set local http://localhost:9000 minio_rag_user minio_rag_password && mc mb local/llama"
+install: install-gpu
 
 # Uninstall the deployment and clean up
 .PHONY: uninstall
-uninstall: uninstall-helm-release uninstall-mcp-servers remove-secrets remove-pvcs install-ingestion-pipeline
+uninstall: uninstall-helm-release uninstall-mcp-servers remove-secrets remove-pvcs uninstall-ingestion-pipeline
 
 	@echo "Checking for any remaining resources in namespace $(NAMESPACE)..."
 	@echo "If you want to completely remove the namespace, run: oc delete project $(NAMESPACE)"
@@ -178,7 +184,7 @@ remove-secrets:
 remove-pvcs:
 
 	@echo "Removing pgvector and minio PVCs"
-	oc delete pvc -n $(NAMESPACE) $$(oc get pvc -n $(NAMESPACE) -o custom-columns=NAME:.metadata.name --no-headers | grep "^pg-data") 
+	oc delete pvc -n $(NAMESPACE) $$(oc get pvc -n $(NAMESPACE) -o custom-columns=NAME:.metadata.name --no-headers | grep "^pg-data")
 	oc delete pvc -n $(NAMESPACE) $$(oc get pvc -n $(NAMESPACE) -o custom-columns=NAME:.metadata.name --no-headers | grep "^minio-data")
 	oc delete pvc -n $(NAMESPACE) $$(oc get pvc -n $(NAMESPACE) -o custom-columns=NAME:.metadata.name --no-headers | grep "^llama-stack-data")
 
