Modify file structure and add Notebook CR

--- a/deploy/helm/Makefile
+++ b/deploy/helm/Makefile
@@ -1,8 +1,11 @@
 # Makefile for RAG Deployment
 # Replaces the original deploy.sh script with additional uninstall functionality
 
+ifeq ($(NAMESPACE),)
+  $(error NAMESPACE is not set)
+endif
+
 # Default values
-NAMESPACE ?= llama-stack-rag
 POSTGRES_USER ?= postgres
 POSTGRES_PASSWORD ?= rag_password
 POSTGRES_DBNAME ?= rag_blueprint
@@ -14,7 +17,9 @@ TOLERATION_LLM_SERVER ?= odh-notebook
 TOLERATION_SAFETY_SERVER ?= odh-notebook
 HF_TOKEN ?= $(shell bash -c 'read -r -p "Enter Hugging Face Token: " HF_TOKEN; echo $$HF_TOKEN')
 MCP_SERVERS_CHART_PATH ?= mcp-servers
+INGESTION_PIPELINE_CHART_PATH ?= ingestion-pipeline
 MCP_SERVERS_RELEASE_NAME ?= mcp-servers
+INGESTION_PIPELINE_RELEASE_NAME ?= ingestion-pipeline
 
 
 # Default target
@@ -40,7 +45,7 @@ help:
 namespace:
 
 	@echo "Creating namespace $(NAMESPACE)..."
-	oc new-project $(NAMESPACE) && oc label namespace $(NAMESPACE) modelmesh-enabled=false || oc project $(NAMESPACE)
+	oc create namespace $(NAMESPACE) && oc label namespace $(NAMESPACE) modelmesh-enabled=false || oc project $(NAMESPACE) ||:
 
 .PHONY: secrets
 secrets:
@@ -80,6 +85,12 @@ install-mcp-servers: namespace
 	
 	@echo "Deploying Helm chart $(MCP_SERVERS_CHART_PATH) as release $(MCP_SERVERS_RELEASE_NAME) in namespace $(NAMESPACE)..."
 	helm upgrade --install $(MCP_SERVERS_RELEASE_NAME) $(MCP_SERVERS_CHART_PATH) -n $(NAMESPACE) 
+
+.PHONY: install-ingestion-pipeline
+install-ingestion-pipeline: namespace
+	
+	@echo "Deploying Helm chart $(INGESTION_PIPELINE_CHART_PATH) as release $(INGESTION_PIPELINE_RELEASE_NAME) in namespace $(NAMESPACE)..."
+	helm install ingestion-pipeline $(INGESTION_PIPELINE_CHART_PATH) -n $(NAMESPACE) 
 
 .PHONY: install
 install: namespace secrets
