--- a/deploy/helm/llm-service/templates/inference-service.yaml
+++ b/deploy/helm/llm-service/templates/inference-service.yaml
@@ -1,15 +1,17 @@
 {{- $root := . }}
-{{- range $key, $model := $.Values.global.models }}
+{{- range $key, $model := .Values.models }}
+{{- if $model.enabled }}
 ---
 apiVersion: serving.kserve.io/v1beta1
 kind: InferenceService
 metadata:
-  name: {{ $model.inferenceService.name }}
+  name: {{ $key }}
   annotations:
-    openshift.io/display-name: {{ $model.inferenceService.name }}
+    openshift.io/display-name: {{ $key }}
     serving.knative.openshift.io/enablePassthrough: "true"
     sidecar.istio.io/inject: "true"
     sidecar.istio.io/rewriteAppHTTPProbers: "true"
+    storage.kserve.io/readonly: "false"
   labels:
     opendatahub.io/dashboard: "true"
     networking.knative.dev/visibility: "cluster-local"
@@ -22,8 +24,8 @@ spec:
         name: vLLM
       name: ""
       resources:
-      {{- if hasKey $model.inferenceService "resources" }}
-      {{- toYaml $model.inferenceService.resources | nindent 8 }}
+      {{- if hasKey $model "resources" }}
+      {{- toYaml $model.resources | nindent 8 }}
       {{- else }}
         limits:
           cpu: "2"
@@ -35,19 +37,22 @@ spec:
           nvidia.com/gpu: "1"
       {{- end }}
       runtime: {{ $root.Values.servingRuntime.name }}
-      storageUri: {{ $model.inferenceService.storageUri }}
+      storageUri: pvc://{{ $key }}/
       args:
+      - --model
+      - {{ $model.id }}
       - --served-model-name
       - {{ $model.id }}
-      {{- with $model.inferenceService.args }}
+      {{- with $model.args }}
         {{- toYaml . | nindent 6 }}
       {{- end }}
-      {{- with $model.inferenceService.env }}
+      {{- with $model.env }}
       env:
         {{- toYaml . | nindent 6 }}
       {{- end }}
-    {{- with $model.inferenceService.tolerations }}
+    {{- with $model.tolerations }}
     tolerations:
       {{- toYaml . | nindent 4 }}
     {{- end }}
+{{- end }}
 {{- end }}
