--- a/deploy/helm/rag-ui/charts/llama-stack/templates/deployment.yaml
+++ b/deploy/helm/rag-ui/charts/llama-stack/templates/deployment.yaml
@@ -44,11 +44,15 @@ spec:
             {{- toYaml .Values.args | nindent 12 }}
           env:
             {{- toYaml .Values.env | nindent 12 }}
-            {{- range $key, $model := $.Values.global.models }}
-            - name: {{ $model.llamaStack.modelIdEnvVar }}
-              value: {{ $model.id }}
-            - name: {{ $model.llamaStack.modelUrlEnvVar }}
-              value: https://{{ $model.inferenceService.name }}.{{ $root.Release.Namespace }}.svc.cluster.local/v1
+            {{- range $key, $model := .Values.models }}
+            - name: {{ $model.id.envVarName }}
+              value: {{ $model.id.envVarValue }}
+            - name: {{ $model.url.envVarName }}
+            {{- if eq $model.url.envVarValue "auto" }}
+              value: https://{{ $key }}.{{ default $root.Release.Namespace $model.namespace }}.svc.cluster.local/v1
+            {{- else }}
+              value: {{ $model.url.envVarValue }}
+            {{- end }}
             {{- end }}
           ports:
             - name: http
