--- a/deploy/helm/rag-ui/values-crc.yaml
+++ b/deploy/helm/rag-ui/values-crc.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: quay.io/yuvalturg/llamastack-dist-ui
+  repository: quay.io/ecosystem-appeng/llamastack-dist-ui
   pullPolicy: IfNotPresent
   tag: 0.1.9
 
@@ -79,41 +79,23 @@ tolerations: []
 
 affinity: {}
 
-global:
+llama-stack:
   models:
-    llama-instruct:
-      id: meta-llama/Llama-3.2-1B-Instruct
-      inferenceService:
-        name: llama-instruct
-        storageUri: oci://quay.io/redhat-ai-services/modelcar-catalog:llama-3.2-1b-instruct
-        resources: {}
-        args:
-        - --enable-auto-tool-choice
-        - --chat-template
-        - /workspace/vllm/examples/tool_chat_template_llama3.2_json.jinja
-        - --tool-call-parser
-        - llama3_json
-        - --max-model-len
-        - "30544"
-      llamaStack:
-        modelIdEnvVar: INFERENCE_MODEL
-        modelUrlEnvVar: VLLM_URL
-    llama-guard:
-      id: meta-llama/Llama-Guard-3-1B
-      inferenceService:
-        name: llama-guard
-        storageUri: oci://quay.io/ecosystem-appeng/modelcars:llama-guard-3-1b
-        resources: {}
-        args:
-        - --max-model-len
-        - "14336"
-      llamaStack:
-        modelIdEnvVar: SAFETY_MODEL
-        modelUrlEnvVar: SAFETY_VLLM_URL
-
-llm-service:
-  servingRuntimeImage: public.ecr.aws/q9t5s3a7/vllm-cpu-release-repo@sha256:6b0d6af534a3c2a24fbcbd0e5e919f9f215be73fdf799a7bbd324178956cb7df
-
+    llama-3-2-1b-instruct:
+      id:
+        envVarName: LLAMA_INSTRUCT_MODEL_ID
+        envVarValue: meta-llama/Llama-3.2-1B-Instruct
+      url:
+        envVarName: LLAMA_INSTRUCT_VLLM_URL
+        envVarValue: auto
+    llama-guard-3-1b:
+      registerShield: true
+      id:
+        envVarName: LLAMA_GUARD_MODEL_ID
+        envVarValue: meta-llama/Llama-Guard-3-1B
+      url:
+        envVarName: LLAMA_GUARD_VLLM_URL
+        envVarValue: auto
 
 ## llama-serve and safety-model were replaced by llm-service, set replicaCount=0 ##
 llama-serve:
