--- a/deploy/helm/rag-ui/values-gpu.yaml
+++ b/deploy/helm/rag-ui/values-gpu.yaml
@@ -79,39 +79,23 @@ tolerations: []
 
 affinity: {}
 
-global:
+llama-stack:
   models:
-    llama-instruct:
-      id: meta-llama/Llama-3.2-3B-Instruct
-      inferenceService:
-        name: llama-instruct
-        storageUri: oci://quay.io/ecosystem-appeng/modelcars:llama-3.2-3b-instruct
-        args:
-        - --enable-auto-tool-choice
-        - --chat-template
-        - /vllm-workspace/examples/tool_chat_template_llama3.2_json.jinja
-        - --tool-call-parser
-        - llama3_json
-        - --max-model-len
-        - "30544"
-      llamaStack:
-        modelIdEnvVar: INFERENCE_MODEL
-        modelUrlEnvVar: VLLM_URL
-    llama-guard:
-      id: meta-llama/Llama-Guard-3-8B
-      inferenceService:
-        name: llama-guard
-        storageUri: oci://quay.io/ecosystem-appeng/modelcars:llama-guard-3-8b
-        args:
-        - --max-model-len
-        - "14336"
-      llamaStack:
-        modelIdEnvVar: SAFETY_MODEL
-        modelUrlEnvVar: SAFETY_VLLM_URL
-
-llm-service:
-  servingRuntimeImage: quay.io/ecosystem-appeng/vllm:openai-v0.8.3
-
+    llama-3-2-3b-instruct:
+      id:
+        envVarName: LLAMA_INSTRUCT_MODEL_ID
+        envVarValue: meta-llama/Llama-3.2-3B-Instruct
+      url:
+        envVarName: LLAMA_INSTRUCT_VLLM_URL
+        envVarValue: auto
+    llama-guard-3-8b:
+      registerShield: true
+      id:
+        envVarName: LLAMA_GUARD_MODEL_ID
+        envVarValue: meta-llama/Llama-Guard-3-8B
+      url:
+        envVarName: LLAMA_GUARD_VLLM_URL
+        envVarValue: auto
 
 ## llama-serve and safety-model were replaced by llm-service, set replicaCount=0 ##
 llama-serve:
