--- a/deploy/helm/Makefile
+++ b/deploy/helm/Makefile
@@ -107,8 +107,10 @@ install: namespace secrets
 	@$(MAKE) pg-vector
 	
 	@$(MAKE) status
+	@$(MAKE) install-ingestion-pipeline
 	@echo "Waiting for deployment to be ready..."
 	@$(MAKE) wait
+	
 
 .PHONY: install-crc
 install-crc: namespace secrets
@@ -121,12 +123,13 @@ install-crc: namespace secrets
 	@$(MAKE) pg-vector
 
 	@$(MAKE) status
+	@$(MAKE) install-ingestion-pipeline
 	@echo "Waiting for deployment to be ready..."
 	@$(MAKE) wait
 
 # Uninstall the deployment and clean up
 .PHONY: uninstall
-uninstall: uninstall-helm-release uninstall-mcp-servers remove-secrets remove-pvcs
+uninstall: uninstall-helm-release uninstall-mcp-servers remove-secrets remove-pvcs install-ingestion-pipeline
 
 	@echo "Checking for any remaining resources in namespace $(NAMESPACE)..."
 	@echo "If you want to completely remove the namespace, run: oc delete project $(NAMESPACE)"
@@ -144,7 +147,7 @@ uninstall-mcp-servers:
 uninstall-ingestion-pipeline:
 
 	@echo "Uninstalling Helm release $(INGESTION_PIPELINE_RELEASE_NAME) from namespace $(NAMESPACE)..."
-	helm uninstall $(INGESTION_PIPELINE_RELEASE_NAME) -n $(NAMESPACE) || echo "MCP servers are not installed or already removed."
+	helm uninstall $(INGESTION_PIPELINE_RELEASE_NAME) -n $(NAMESPACE) || echo "Pipelines are not installed or already removed."
 
 .PHONY: uninstall-helm-release
 uninstall-helm-release:
